# emoji-separated-values

./: .goreleaser.yaml  AGENTS.md  Cargo.toml  NOTES.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/cli/: Cargo.toml
src/cli/src/: lib.rs  main.rs
src/core/: Cargo.toml
src/core/benches/: esv_benchmarks.rs
src/core/src/: error.rs  lib.rs  parser.rs  serializer.rs
