[workspace]
members = ["src/core", "src/cli"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
uninlined_format_args = "warn"
collapsible_if = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.dependencies]
# Internal crates
esv-core = { path = "src/core" }

# External dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Benchmarking
criterion = "0.5"
