[package]
name = "esv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "esv"
path = "src/main.rs"

[lib]
name = "esv_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
esv-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
